--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # == Core do Cloud Run e Flask ==
 functions-framework==3.*
-Flask==2.3.3
+Flask[async]==2.3.3
 Flask-Cors==4.0.0
 httpx==0.27.0
 
@@ -30,6 +30,4 @@ html5lib==1.1
 bleach==6.1.0
 
 # == Dependências Cloud Run ==
-grpcio>=1.60.0
-protobuf>=4.25.3
 setuptools>=65.5.0
