--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,39 @@
-# == Core do Cloud Run e Flask ==
-functions-framework==3.*
+# === Core Web (Cloud Run + Flask) ===
+functions-framework==3.4.0
 Flask[async]==2.3.3
 Flask-Cors==4.0.0
 httpx==0.27.0
 
-# == Firebase e Firestore ==
+# === Google Cloud (Firebase, Firestore, Storage, Vertex AI, Translate) ===
 firebase-admin==6.2.0
-google-cloud-firestore>=2.10.0
-google-cloud-storage>=2.10.0
-
-# == Geração de Conteúdo e IA (Vertex AI/Gemini) ==
-vertexai==1.49.0
+google-cloud-firestore==2.10.0
+google-cloud-storage==2.10.0
 google-cloud-translate==3.11.0
+vertexai==1.49.0
 
-# == Processamento de Dados Multimídia e Texto ==
+# === Processamento de Arquivos e Dados ===
 PyMuPDF==1.23.25
 python-docx==1.1.0
 Pillow==10.1.0
 PyYAML==6.0.1
 
-# == Utilidades e Processamento de Linguagem Natural (NLP) ==
+# === NLP e Utilidades ===
 dateparser==1.2.0
 numpy==1.26.4
 scikit-learn==1.4.1.post1
-pytz>=2023.3
+pytz==2023.3
 
-# == Sanitização ==
+# === Sanitização HTML ===
 html5lib==1.1
 bleach==6.1.0
 
-# == Dependências Cloud Run ==
+# === Observabilidade e Telemetria (Cloud Run compatível) ===
 setuptools>=65.5.0
-
-# == Adicionado para resolver o erro de OpenTelemetry no Cloud Run ==
-# Estas versões são exemplos. Recomendo verificar as mais recentes em pypi.org
-# e garantir compatibilidade se você tiver outras bibliotecas que usam OpenTelemetry.
 opentelemetry-api==1.25.0
 opentelemetry-sdk==1.25.0
 opentelemetry-instrumentation==0.45b0
-opentelemetry-instrumentation-httpx==0.45b0 # Importante para httpx, que você usa
-opentelemetry-instrumentation-requests==0.45b0 # Se você usa 'requests' em algum lugar
-opentelemetry-instrumentation-flask==0.45b0 # Para Flask
-opentelemetry-exporter-otlp==1.25.0 # Para exportar traces (se necessário)
-opentelemetry-exporter-otlp-proto-grpc==1.25.0 # Exportador via gRPC
+opentelemetry-instrumentation-httpx==0.45b0
+opentelemetry-instrumentation-requests==0.45b0
+opentelemetry-instrumentation-flask==0.45b0
+opentelemetry-exporter-otlp==1.25.0
+opentelemetry-exporter-otlp-proto-grpc==1.25.0
