--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@ httpx==0.27.0
 
 # == Firebase e Firestore ==
 firebase-admin==6.2.0
-google-cloud-firestore>=2.10.0
+# FIXADO: Garantir versão do Firestore que suporta 'source'
+google-cloud-firestore==2.16.0 # Ou uma versão mais recente, por exemplo, 2.16.0 ou superior da série 2.x
 google-cloud-storage>=2.10.0
 
 # == Geração de Conteúdo e IA (Vertex AI/Gemini) ==
@@ -32,5 +33,4 @@ bleach==6.1.0
 # == Dependências Cloud Run ==
 setuptools>=65.5.0
 
-# == Removido OpenTelemetry para resolver falha de deploy ==
-# Se a instrumentação for necessária no futuro, investigue a compatibilidade de versões ou a desativação da auto-instrumentação do Cloud Run via variável de ambiente GOOGLE_CLOUD_DISABLE_AUTO_INSTRUMENTATION.
+# == Removido OpenTelemetry para resolver falha de deploy (MANTER ASSIM) ==
